:art: 抽象 EventHandler 处理 特殊事件 增强扩展性