@@ -16,3 +16,6 @@ dependencies {
   optional 'io.netty:netty-transport-classes-epoll'
 
 }
+
+// --add-opens=java.base/java.nio=ALL-UNNAMED
+//--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
